@@ -1,0 +1,8 @@
+==================
+Hong & Goda (2007)
+==================
+
+.. module:: openquake.hazardlib.gsim.hong_goda_2007
+
+.. autoclass:: HongGoda2007
+    :members:
