@@ -1,0 +1,17 @@
+=================
+Kotha et al. 2016
+=================
+
+.. module:: openquake.hazardlib.gsim.kotha_2016
+
+.. autoclass:: KothaEtAl2016
+    :members:
+
+.. autoclass:: KothaEtAl2016Italy
+    :members:
+
+.. autoclass:: KothaEtAl2016Turkey
+    :members:
+
+.. autoclass:: KothaEtAl2016Other
+    :members:
