@@ -1,0 +1,8 @@
+========================
+Travasarou et al. (2003)
+========================
+
+.. module:: openquake.hazardlib.gsim.travasarou_2003
+
+.. autoclass:: TravasarouEtAl2003
+    :members:
