@@ -1,6 +1,7 @@
   [Graeme Weatherill]
   * Adds/Modifies Ry0 and Rx calculator for multi-surface typology using the Generalized Coordinate System (GC2)
-  
+  * Implements the European GMPE of Kotha et al. (2016), the SaRotD100 GMPE of Hong & Goda (2007) and the Arias Intensity GMPE of Trvasarou et al. (2003)
+
   [Michele Simionato]
   * The `SourceSitesFilter` is now used by default in `pmap_from_grp`
   * Added a simple argument parser in baselib
